# rrtsp_client

./: Cargo.toml  Readme.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  build.sh  run.sh
examples/: simple_client.rs
src/: body.rs  client.rs  lib.rs  log_test.rs  message_socket.rs  mod.rs  parser_utilities.rs  rtsp_machine.rs
